fix overflow-x on mobile and tablet

--- a/src/pages/Login/style.sass
+++ b/src/pages/Login/style.sass
@@ -5,7 +5,7 @@
     display: flex
     flex-direction: column
     align-items: center
-    margin: 6rem 1rem 4rem
+    margin: 6rem 0 4rem
     @include mixins.desktop
         margin: 8rem 0 4rem
     &__info
